killdep: apache io